--- a/resources/sass/user.scss
+++ b/resources/sass/user.scss
@@ -1,7 +1,7 @@
 body {
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #e0ffff;
+  background-color: #fffea88;
   color: #fff;
 }
 
