--- a/resources/sass/user.scss
+++ b/resources/sass/user.scss
@@ -39,16 +39,6 @@ body {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
-// Variables
-@import "variables";
-
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-// Typography
-$font-family-sans-serif: "Raleway", sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+.top-img {
+  
+}
