--- a/resources/sass/user.scss
+++ b/resources/sass/user.scss
@@ -2,14 +2,26 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-color: #fffea88;
-  color: #fff;
 }
 
 .navbar-laravel {
-  background-color: #000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  background-color: #FFBBFF;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.04);
 }
 
+.n-title {
+  color: #33CC00;
+  font-size: 40px;
+  font-weight: 800;
+  font-family: "Kokoro";
+}
+
+.navbar-nav{
+  color: #33CC00;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: "Kokoro";
+}
 .navbar-brand {
   color: #fff !important;
 }
@@ -27,18 +39,61 @@ body {
   background-color: #000;
 }
 
-.login-box {
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.login-header {
-  background-color: rgba(0, 0, 0, 0.25)
-}
-
-.login-body {
-  background-color: rgba(0, 0, 0, 0.25);
+.py-4{
+  background-color: #FFDDFF;
 }
 
 .top-img {
+  
+}
+
+.top-letter {
+  border: solid 3px #ffb03f;
+  padding: 0.5em 1em 0.5em 2.3em;
+  position: relative;
+}
+
+.top-letter li {
+  font-family:"kokoro";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0.5em 0;
+  list-style-type: none!important;/*ポチ消す*/
+}
+
+.top-letter li:before {
+  font-family: "Font Awesome";
+  content: "\f00c";
+  position: absolute;
+  left : 1em; /*左端からのアイコンまで*/
+  color: #ffb03f; /*アイコン色*/
+}
+
+.for-u{
+  
+}
+
+h3{
+  
+}
+
+.middle-img{
+  
+}
+.place-img {
+  
+  
+}
+
+.food-img {
+  
+}
+
+.middle-letter{
+  
+}
+
+.forexam{
   
 }
